--- a/admin/models/forms/image.xml
+++ b/admin/models/forms/image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Id$ -->
 <form>
-	<fieldset name ="image">	
+	<fieldset name ="image_1st_col">	
 		<field
 			name			= "id"
 			type			= "hidden"
@@ -59,31 +59,25 @@
 			<option value="0" >COM_RSG2_TOP_GALLERY</option>
 		</field>	
 
-		<field
-			name			= "permissions"
-			type			= "text"
-			label           = "COM_RSG2_PERMISSIONS"
-			description     = ""
-			filter			= "unset"
-			class			= "readonly"
-			readonly		= "true"			
-		/>
-
+		<!-- parameters
+			Bad size			= "10"
+		
+			height 			= "150"
+			width 			= "30%"		
+		-->
 		<field
 			name			= "description"
 			type			= "editor"
 			label           = "COM_RSG2_DESCRIPTION"
 			description     = ""
-			width 			= "30%"
-			height 			= "150"
 			filter          = "safehtml"
 			class			= "span5"
-			size			= "10"
+			rows            = "10"
 		/>
 
 		<field
 			name			= "ordering"
-			type			= "RsgOrderingList"
+			type			= "RsgImageOrderingList"
 			label           = "COM_RSG2_ORDERING"
 			filter          = "integer"
 			size			= "1"
@@ -106,6 +100,33 @@
 			<option value="0" >JUNPUBLISHED</option>
 			<option value="-2">JTRASHED</option>			
 		</field>	
+    </fieldset>	
+	
+	<fieldset name ="image_2nd_col">	
+        <field 
+			name			= "name"
+            type			= "RsgImageView"
+            label           = "COM_RSG2_ITEM_PREVIEW"
+
+        />
+
+        <!-- field
+            name			= "params"
+            type			= "text"
+            label           = "COM_RSG2_PARAMETERS"
+
+			description     = ""
+			maxlength       = "250"
+			filter          = ""
+			size            = "60"
+            /-->
+
+        <!--field
+            name			= "image_folders"
+            type			= "ImageFolders"
+            label           = "COM_RSG2_LINKS_TO_IMAGE"
+            /-->
+
 
 <!-- ==================================================================== -->
 
