--- a/admin/models/forms/gallery.xml
+++ b/admin/models/forms/gallery.xml
@@ -73,7 +73,7 @@
 			size			= "1"
         >
 			<!--option value="-1" >COM_RSG2_SELECT_GALLERY</option-->
-			<option value="0" >- Random thumbnail -</option>
+			<option value="0" >COM_RSGALLERY2_MINUS_RANDOM_THUMBNAIL_MINUS</option>
 		</field>	
 
 		<field
