--- a/admin/css/admin.rsg2.css
+++ b/admin/css/admin.rsg2.css
@@ -32,10 +32,11 @@
 }
 
 .debug_icon_container {
+	background-color:lightblue; /**/
     float: left; /**/
 }
 
-.rsgicon{
+.rsg2icon{
 	border: 5px; /**/
 	margin:10px 10px; /**/
 	/* margin:10px auto; /**/
