--- a/admin/css/admin.rsg2.css
+++ b/admin/css/admin.rsg2.css
@@ -1,83 +1,84 @@
 
-.panel_area
-{
-    display: block;
-    float: left;
+div.iconimage img {
+	margin:0px 16px; /**/
+	/*border: none; /**/
+	/*background: red; /**/
 }
-#rsg2-cpanelDebug{
-	margin-top: 20px; /**/
-	margin-left: 10px; /**/
-	margin-right: 10px; /**/
-    clear: left;
-    border: 1px dashed #d00;
-    /* background-color: #df3e3e; /**/
-    border-radius: 3px;
-    /* padding: 10px; /**/
-}
-
-#rsg2-cpanelDebug div.icon a{
-    border: 1px dashed #d00;
-}
-
-#rsg2-cpanelDebug #DangerZone{
-    /* background-color: red; /**/
-    background-color: #df3e3e; /**/
-    color: white; /**/
-    /* padding: 30px; /**/
-    padding: 5px; /**/
-}
-
-#rsg2-DebugHeader {
-	margin: 10px; /**/
-}
-
-.debug_icon_container {
-	background-color:lightblue; /**/
-    float: left; /**/
-}
-
+	
 .rsg2icon{
 	border: 5px; /**/
 	margin:10px 10px; /**/
 	/* margin:10px auto; /**/
     /* float:left; /**/
     width: 80px; /**/
+	/* min-width: 80px; /**/
     height: 80px; /**/
     padding: 10px; /**/
 	background-color: white; /**/
+	/* background-color: red; /**/
 	text-align: center; /**/
 	border-radius: 8px; /**/	
 	box-shadow: 2px 2px 1px #888888; /**/
 }
 
 .debugicon{
-	border: 5px; /**/
-	margin:10px 10px; /**/
-	/* margin:10px auto; /**/
-    /* float:left; /**/
-    width: 80px; /**/
     height: 140px; /**/
-    padding: 10px; /**/
-	background-color: white; /**/
-	text-align: center; /**/
-	border-radius: 8px; /**/	
-	box-shadow: 2px 2px 1px #888888; /**/
 }
 
-div.iconimage img {
-	margin:0px 16px; /**/
-	/*border: none; /**/
-	/* background: red; /**/
-}
-	
-div#rsg2-cpanelDebug div.icon {
-	height: 300px; /**/
-	background: red; /**/
+.rsg2_icon_container {
+	/* background-color:lightblue; /**/
+	margin:10px 10px; /**/
+    /* float: left; /**/
 }
 
-/* utility selectors */
-.rsg2-clr{
-    clear:both;
-    line-height:0px;
+.greybackground {
+    background-color: #f7f8f9;
+    border: 1px solid #d5d5d5;
+    padding: 3px;
+}
+
+.rsg2logo {
+	/* width: 100%; /**/
+	/* margin:10px 16px; /**/
+	/* margin:auto; /**/
+	margin-top: 10px; /**/
+	margin-left: 0px; /**/
+	padding: 10px; /**/
+    background-color: white; /**/
+	border-radius: 2px; /**/	
+}
+
+.rsg2logo > img {
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.rsg2-cpanelDebug{
+	margin-top: 20px; /**/
+	margin-left: 10px; /**/
+	margin-right: 20px; /**/
+    clear: left;
+    border: 1px dashed #d00;
+    /* background-color: #df3e3e; /**/
+    border-radius: 3px;
+    /* padding: 10px; /**/
+	display: block; /**/
+}
+
+.rsg2-cpanelDebug .DangerZone{
+    /* background-color: red; /**/
+    background-color: #df3e3e; /**/
+    color: white; /**/
+    /* padding: 30px; /**/
+    padding: 5px; /**/
+	margin-left: 20px; /**/
+    border-radius: 3px 3px 0px 0px;
+}
+
+.rsg2-DebugHeader {
+	margin: 10px; /**/
+	margin-left: 30px; /**/
 }
 
