--- a/admin/css/admin.rsg2.css
+++ b/admin/css/admin.rsg2.css
@@ -7,8 +7,9 @@ div.iconimage img {
 	
 .rsg2icon{
 	border: 5px; /**/
-	margin:10px 10px; /**/
-	/* margin:10px auto; /**/
+	/* margin:10px 10px; /**/
+    /* margin:10px auto; /**/
+    margin:auto auto; /**/
     /* float:left; /**/
     width: 80px; /**/
 	/* min-width: 80px; /**/
@@ -28,6 +29,8 @@ div.iconimage img {
 .rsg2_icon_container {
 	/* background-color:lightblue; /**/
 	margin:10px 10px; /**/
+/*    margin:auto; /**/
+    margin-left: 30px; /**/
     /* float: left; /**/
 }
 
@@ -73,12 +76,12 @@ div.iconimage img {
     color: white; /**/
     /* padding: 30px; /**/
     padding: 5px; /**/
-	margin-left: 20px; /**/
+	margin-left: 30px; /**/
     border-radius: 3px 3px 0px 0px;
 }
 
 .rsg2-DebugHeader {
 	margin: 10px; /**/
-	margin-left: 30px; /**/
+	margin-left: 40px; /**/
 }
 
