New texts for rsgallery2 info

--- a/admin/css/admin.rsg2.css
+++ b/admin/css/admin.rsg2.css
@@ -54,8 +54,8 @@ div.iconimage img {
 .rsg2logo > img {
 
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10;
+    /* margin-right: auto; /**/
 }
 
 .rsg2-cpanelDebug{
