--- a/admin/css/admin.rsg2.css
+++ b/admin/css/admin.rsg2.css
@@ -40,6 +40,11 @@ div.iconimage img {
     padding: 3px;
 }
 
+.rsg2logo-container {
+    border: 1px solid #d5d5d5;
+    border-radius: 2px; /**/
+}
+
 .rsg2logo {
 	/* width: 100%; /**/
 	/* margin:10px 16px; /**/
@@ -54,7 +59,7 @@ div.iconimage img {
 .rsg2logo > img {
 
     display: block;
-    margin-left: 10;
+/*    margin-left: 10; /**/
     /* margin-right: auto; /**/
 }
 
