--- a/admin/css/Maintenance.css
+++ b/admin/css/Maintenance.css
@@ -1,33 +1,55 @@
-/* Maintenance.css */
 
-#rsg2-thisform {
-    background-color: #F7F8F9;
-    border: solid 1px #d5d5d5;
-    padding: 3px;
-/*     width: 98%; */
-/*     border-collapse: collapse; */
-}
-
-div.iconimage img {
-	border: none;
-}
-
-div.iconimage img {
-	margin:0px 16px; /**/
-	/*border: none; /**/
-	/* background: red; /**/
-}
+.rsg2-icon-bar {
+/*	background-color: white; /**/
+/*	border: 1px solid #DDD;
+/*	border-radius: 8px; /**/
 	
-/* Style icon bar for Maintenance screen */
-div.rsg2-icon {
-	width: 100px;
-	height: 70px;
-	float:left;
-	margin: 3px;
+/*	margin: 13px auto; 
+
+/*	display: block; /**/
+/*	display: inline-block;  /**/
+	
 }
 
-div.rsg2-text {
+.rsg2-icon-bar a {
+ 	float: left; /**/
+
+	background-color: white; /**/
+	border: 1px solid #DDD;
+	border-radius: 8px; /**/
+	
+	margin: 10px; 
+	padding: 7px;
+/*	width: 80%; /**/
+
+/*	display: block; /**/
+/*	display: inline-block;  /**/
+	
+	/* width: 448px !important; /**/
+	/* width: 450px;  /**/
+	
+	vertical-align: middle; 
+	
+	box-shadow: 2px 2px 1px #888888; /**/
+}
+
+.rsg2-icon
+	float:left;
+	margin: 10px ;
+
+	height: 75px !important;
+	height: 100px; 
+	
+/*	display: inline-block; /**/
+}
+
+.rsg2-text {
 	text-align: left;
+/*	display: inline-block; /**/
+/*	float: right; /**/
+	float: left; /**/
+	
+/*	margin-left: 110px; /**/
 }
 
 .maint-title {
@@ -36,89 +58,77 @@ div.rsg2-text {
 }
 
 .maint-text {
-	font-size: smaller;
+	/* font-size: smaller; /**/
 }
 
 
-#cpanel div.icon-bar   { 
-	margin: 3px; 
-}
-#cpanel div.icon-bar a { 
-	display: block; 
-	float: left;
-	height: 75px !important;
-	height: 100px; 
-	width: 448px !important;
-	width: 450px; 
-	vertical-align: middle; 
-	text-decoration : none;
-	border: 1px solid #DDD;
-	padding: 2px 5px 1px 5px;
-	border-radius: 8px; /**/
-	background-color: white; /**/
-	box-shadow: 2px 2px 1px #888888; /**/
-}
 
-#cpanel div.icon-bar a:link    {  
+.rsg2-icon-bar a:link    {
 	color : #808080;  
 }
-#cpanel div.icon-bar a:hover   { 
+.rsg2-icon-bar a:hover   {
 	color : #333; 
 	background-color: #f1e8e6;  
 	border: 1px solid #c24733;
 	padding: 3px 4px 0px 6px; 
 }
-#cpanel div.icon-bar a:active  {  
-	color : #808080;  
-}
-#cpanel div.icon-bar a:visited {  
-	color : #808080;  
-}
-
-#cpanel div.icon-bar img {
-	margin-top: 13px; 
-}
-#cpanel div.icon-bar span { 
-	display: block; 
-	padding-top: 3px;
-}
 
 
-#rsg2-cpanelDebug{
+
+
+
+.grey-background {
+    background-color: #f7f8f9;
+    border: 1px solid #d5d5d5;
+    padding: 3px;
+}
+
+.icons-panel {
 	margin-top: 20px; /**/
 	margin-left: 10px; /**/
-	margin-right: 10px; /**/
+	margin-right: 20px; /**/
     clear: left;
-    border: 1px dashed #d00;
     /* background-color: #df3e3e; /**/
     border-radius: 3px;
     /* padding: 10px; /**/
+	display: block; /**/
 }
 
-#rsg2-cpanelDebug div.icon a{
-    border: 1px dashed #d00;
+.repair {
+    border: 1px solid blue;
 }
 
-#rsg2-cpanelDebug #DangerZone{
+.danger {
+    border: 1px solid #d00;
+}
+
+.icons-panel .dangerZone{
     /* background-color: red; /**/
     background-color: #df3e3e; /**/
     color: white; /**/
     /* padding: 30px; /**/
     padding: 5px; /**/
+	margin-left: 0px; /**/
+    border-radius: 3px 3px 0px 0px;
 }
 
-#rsg2-DebugHeader {
+.icons-panel .repairZone{
+    /* background-color: red; /**/
+    background-color: DodgerBlue; /**/
+    color: white; /**/
+    /* padding: 30px; /**/
+    padding: 5px; /**/
+    margin-left: 0px; /**/
+    border-radius: 3px 3px 0px 0px;
+}
+
+.icons-panel-title h3
+{
+    margin-left: 10px; /**/
+}
+
+.icons-panel-info {
 	margin: 10px; /**/
+	margin-left: 40px; /**/
 }
-
-#cpanel{
-    margin-right: 45%;
-}
-
-div#rsg2-cpanelDebug div.icon {
-	height: 300px; /**/
-	background: red; /**/
-}
-
-
 
