--- a/admin/css/Maintenance.css
+++ b/admin/css/Maintenance.css
@@ -18,7 +18,7 @@
 	border: 1px solid #DDD;
 	border-radius: 8px; /**/
 	
-	margin: 10px; 
+	margin: 10px 20px; 
 	padding: 7px;
 /*	width: 80%; /**/
 
@@ -59,6 +59,7 @@
 
 .maint-text {
 	/* font-size: smaller; /**/
+	color: true;
 }
 
 
@@ -79,7 +80,7 @@
 
 .grey-background {
     background-color: #f7f8f9;
-    border: 1px solid #d5d5d5;
+/*    border: 1px solid #d5d5d5; /**/
     padding: 3px;
 }
 
