Image as buttons fixed

--- a/admin/css/admin.rsg2.css
+++ b/admin/css/admin.rsg2.css
@@ -22,10 +22,75 @@ div.iconimage img {
 	box-shadow: 2px 2px 1px #888888; /**/
 }
 
+.iconMoon{
+	border: 5px; /**/
+	margin:10px 10px; /**/
+	/* margin:10px auto; /**/
+    /* float:left; /**/
+    width: 80px; /**/
+    height: 80px; /**/
+    padding: 10px; /**/
+	background-color: white; /**/
+	text-align: center; /**/
+	border-radius: 8px; /**/	
+	box-shadow: 2px 2px 1px #888888; /**/
+}
+
 .debugicon{
     height: 140px; /**/
 }
 
+div.iconMoonImage {
+/*	margin:15px 10px; /**/
+/*	padding: 10px; /**/
+	text-align: center; /**/
+/*	color:red; /**/
+	/*border: none; /**/
+/*	border: solid 2px green; /**/
+	/* background: red; /**/
+}
+
+div.iconMoonImage > SPAN {
+	/* border: solid 2px red; /**/
+	/* padding: 60px; /**/
+	/* margin: 60px; /**/
+	padding: 20px 0 10px 0; /**/
+	position: relative;
+	left: -12px;
+}
+
+div.iconMoonImage > SPAN.clsProperties {
+	color:blue; /**/
+}
+	
+div.iconMoonImage > SPAN.clsGalleries {
+	color:green; /**/
+}
+	
+div.iconMoonImage > SPAN.clsBatchUpload {
+	color:green; /**/
+}
+	
+div.iconMoonImage > SPAN.clsUpload {
+	color:green; /**/
+}
+	
+div.iconMoonImage > SPAN.clsBatchUpload {
+	color:green; /**/
+}
+	
+div.iconMoonImage > SPAN.clsImages {
+	color:green; /**/
+}
+	
+div.iconMoonImage > SPAN.clsMaintenance {
+	color:red; /**/
+}
+	
+div.iconMoonImage > SPAN.clsTemplate{
+	color:blue; /**/
+}
+	
 .rsg2_icon_container {
 	/* background-color:lightblue; /**/
 	margin:10px 10px; /**/
