Checked for missing files,
some may have to be deleted

--- a/admin/models/forms/gallery.xml
+++ b/admin/models/forms/gallery.xml
@@ -115,12 +115,15 @@
 		<field
 			name			= "published"
 			type			= "radio"
+			class="btn-group btn-group-yesno"
 			label           = "COM_RSG2_PUBLISHED"
 			default			= "1" 
 			description     = ""
 		>
-			<option value="0">JNO</option>
-			<option value="1">JYES</option>		
+			<option
+				value="1">JYES</option>
+			<option
+				value="0">JNO</option>				
 		</field>
     </fieldset>	
 	
