--- a/admin/models/forms/config.xml
+++ b/admin/models/forms/config.xml
@@ -5,7 +5,7 @@
 		<field
 			name			= "Version"
 			type			= "text"
-			label           = "COM_RSG2_VERSION"
+			label           = "COM_RSGALLERY2_VERSION"
 			description     = ""
 			maxlength       = "250"
 			filter          = ""
